MongoDB Cloud Database Connected | Remove useCreateIndex when connecting

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,2 +1,2 @@
 PORT = 4000
-DB_URI = "mongodb://localhost:27017/ecommerce"
+DB_URI = "mongodb+srv://anwersayeed:anwersayeed@cluster0.8qpp9.mongodb.net/?retryWrites=true&w=majority"
